# IMBA

./: .gitignore  Dockerfile  README.md  experiment.mp4Zone.Identifier  pyproject.toml
IMBAtracker/: Dockerfile  TrackExperiment.py  createCollisionsCSVinExperiment.sh  setup.sh  tracker_command.txt
IMBAtracker/IMBAtrackerGUI/: .swp  TrackExperiment.py  TrackMain.ui
IMBAtracker/IMBAtracker_cpp/: .gitignore  blobUtils.cpp  blobUtils.hpp  larvaDistanceMap.hpp  larvaObject.cpp  lrvTrackConfig.h  lrvTrackConfig.h.in  lrvTrackDebug.hpp  lrvTrackFit.hpp  lrvTrackOL.cpp  metadata.txt  setup_tracker.sh
IMBAtracker/IMBtracker_cpp/: CMakeLists.txt  larvaObject.hpp  lrvTrackOL.cpp
IMBAtracker/lrvTrack/: lpsolver.cpp  lrvTrackBase.cpp  lrvTrackOL.cpp  readme.txt
IMBAvisualizer/: DESCRIPTION  create_variables.R  global_variables.Rds  install_and_run.R  setup.sh
IMBAvisualizer/R/: app_server.R  app_ui.R  functions_track.R  mod_1dBinning_plots.R  mod_2dbinning.R  mod_filtering.R  mod_pca.R  mod_singleTimeSeries.R  mod_variableSelection.R  run_app.R
IMBAvisualizer/man/: clockwise_angle.Rd  process_data_dt.Rd
IMBAvisualizer/shiny_app/: create_variables.R  global.R  global_variables.Rds
IMBAvizualizer/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  setup.sh
IMBAvizualizer/R/: app_config.R  functions_binning.R  functions_help.R  functions_summarise.R  mod_accepted_tracks.R  mod_analysis.R
IMBAvizualizer/scripts/: silly-walk-analysis.R
IMBAvizualizer/variables/: binningVariables.csv  singleModeVariables.csv
IMBtracker/: TrackUI.py  __init_.py  setup.sh  test.r
IMBtracker/20220608_183454-data/: 10.csv  13.csv  14.csv  16.csv  17.csv  4.csv  5.csv  6.csv  7.csv  8.csv
IMBtracker/IMBtracker_cpp/: larvaDistanceMap.cpp  lrvTrackFit.cpp  lrvTrackOL.cpp  lrvTrackOL.hpp  lrvTrackPartitionGenerator.hpp  setup.sh
IMBtracker/IMBtracker_interface/: .Rhistory  .TrackExperiment.py.swo  .TrackUI.py.swp  Track.ui  TrackExperiment.py  TrackExperiment_new_0309.py  TrackExperiment_remote.py  columnizeColisionGraphWModelBorders.sh  sim.py  test.py  test.r
IMBvizualizer/: README.Rmd  create_variables.R  install_and_run.R  setup.sh
IMBvizualizer/R/: functions_plots.R  functions_track.R
IMBvizualizer/dev/: 01_start.R
IMBvizualizer/inst/: golem-config.yml
IMBvizualizer/man/: analyze_data.Rd
IMBvizualizer/scripts/: binning.R  functions_plots_test.R  functions_processing_tracked_test.R  testing_functions.R
IMBvizualizer/vignettes/: ILLAV1.Rmd
docs/: STRUCTURE.md
imba_tracker/: __init__.py  association.py  cli.py  collisions.py  config.py  cv_angle.py  detect.py  dish.py  export_ui.py  frame_input.py  geometry.py  legacy_csv.py  overlay_video.py  pipeline.py  preprocess.py  spine_extract.py  types.py
legacy/docker/: Dockerfile
legacy/experiments/: TrackExperiment.py
legacy/lrv_track/: CMakeLists.txtZone.Identifier  lpsolver.hpp  lrvTrack.hpp  lrvTrackDebug.cpp
legacy/qt_gui/: .swo  Analyze.ui
legacy/scripts/: createCollisionsCSVinExperiment.sh  setup_host.sh
legacy/tracker_cpp/: lrvTrackBase.hpp
scripts/: run_python_tracker_example.ps1  run_python_tracker_example.sh
shiny_app/: install_and_run.R  setup.sh
shiny_app/R/: app_ui.R  functions_processing_tracked.R  golem_utils_server.R  mod_aggregationTable.R  mod_singleTrackSelection.R
tests/: test_preprocess.py
(+35 files in other folders)
