[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "imba-tracker"
version = "0.1.0"
description = "Minimal IMBA Python tracker (CLI-first; for R Shiny / batch: per-frame detection, no ID linking)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
imba-detect = "imba_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imba_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
